--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.41.0",
+    "@octokit/rest": "^22.0.1",
+    "@supabase/supabase-js": "^2.95.3",
+    "archiver": "^7.0.1",
+    "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.34.0",
+    "groq-sdk": "^0.37.0",
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.564.0",
+    "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.16"
+    "stripe": "^20.3.1",
+    "tailwind-merge": "^3.4.1",
+    "uuid": "^13.0.0",
+    "vaul": "^1.1.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "postcss": "^8",
