--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -23,8 +23,10 @@ jobs:
           channel: 'stable'
           cache: true
 
-      - run: flutter create . --platforms android
-        working-directory: ./generated-app
+      - run: |
+          flutter create temp_app --project-name appforge_app --platforms android
+          cp -r temp_app/android generated-app/
+          rm -rf temp_app
 
       - run: flutter pub get
         working-directory: ./generated-app
