--- a/generated-app/.github/workflows/build.yml
+++ b/generated-app/.github/workflows/build.yml
@@ -1,23 +1,47 @@
 name: Build Android APK
-on: [push]
+on:
+  push:
+    branches:
+      - build-artifacts
+  workflow_dispatch:
+
 jobs:
   build:
-    name: Build APK
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
+          flutter-version: '3.19.x'
+          channel: 'stable'
+          cache: true
       
+      - run: |
+          flutter create temp_app --project-name appforge_app --platforms android
+          cp -r temp_app/android generated-app/
+          rm -rf temp_app
+          # Patch AndroidManifest with correct Label / Icon reference
+          cp generated-app/android_xml_overlay/AndroidManifest.xml generated-app/android/app/src/main/AndroidManifest.xml
+
       - run: flutter pub get
+        working-directory: ./generated-app
+
       - run: flutter build apk --release --no-tree-shake-icons
+        working-directory: ./generated-app
       
+      - name: Rename APK
+        run: |
+          APP_NAME=$(grep 'name:' generated-app/pubspec.yaml | cut -d ' ' -f 2)
+          echo "App Name: $APP_NAME"
+          mv generated-app/build/app/outputs/flutter-apk/app-release.apk generated-app/build/app/outputs/flutter-apk/$APP_NAME.apk
+          echo "APK_PATH=generated-app/build/app/outputs/flutter-apk/$APP_NAME.apk" >> $GITHUB_ENV
+          echo "APK_NAME=$APP_NAME.apk" >> $GITHUB_ENV
+
       - uses: actions/upload-artifact@v4
         with:
-          name: app-release
-          path: build/app/outputs/flutter-apk/app-release.apk
+          name: ${{ env.APK_NAME }}
+          path: ${{ env.APK_PATH }}
