--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -24,7 +24,7 @@ jobs:
           cache: true
 
       - run: |
-          flutter create temp_app --project-name appforge_app --platforms android
+          flutter create temp_app --project-name AppBuilder_app --platforms android
           cp -r temp_app/android generated-app/
           rm -rf temp_app
 
