--- a/generated-app/.github/workflows/build.yml
+++ b/generated-app/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           cache: true
       
       - run: |
-          flutter create temp_app --project-name appforge_app --platforms android
+          flutter create temp_app --project-name AppBuilder_app --platforms android
           cp -r temp_app/android generated-app/
           rm -rf temp_app
           # Patch AndroidManifest with correct Label / Icon reference
